# MIT_Agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Project_context.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  rules_for_coding.md
backend/answering/: abstention.py  answer_generator.py  answer_validator.py  citation_formatter.py  confidence.py  conversational_context.py  followup_resolution.py  grounded_answering.py  hallucination_guard.py
backend/api/: chat_models.py  chat_ui.py  main.py  tts_service.py
backend/chunking/: chunk_pipeline.py  content_type_detector.py  metadata_enricher.py  section_splitter.py  semantic_grouper.py  serializers.py  token_splitter.py  validators.py
backend/config/: settings.py
backend/context/: citation_builder.py  context_builder.py  context_deduplicator.py  grounding.py  prompt_assembler.py  semantic_grouping.py  token_budget.py  validators.py
backend/conversation/: context_window.py  memory.py  query_rewriter.py  retrieval_state.py  session_manager.py  validators.py
backend/embeddings/: batch_embedder.py  eligibility.py  embed_chunks.py  (+3 more)
datasets/: embedding_cache.npz  semantic_cache.db
reports/: answer_quality_report.json  bm25_benchmark_results.json  chunking_report.json  context_quality_report.json  corpus_normalization_report.json  duplicate_report.json  embedding_manifest.json  extraction_stats.json  failed_rows.json  hybrid_retrieval_report.json  ingestion_report.json  reranking_report.json  retrieval_metrics.json  semantic_normalization_report.json  validation_report.json
(+144 files in other folders)
