[project]
name = "college-ai-assistant-backend"
version = "0.1.0"
description = "Phase 1 ingestion backend for cleaning scraped college website data."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.9.6",
    "regex>=2024.9.11",
    "sentence-transformers>=3.0.0",
    "spacy>=3.8.0",
    "tiktoken>=0.8.0",
    "torch>=2.2.0",
    "trafilatura>=1.12.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "edge-tts>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["datasets*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
